@@ -16,7 +16,8 @@ impl PlayerCharacter {
             entity: Entity {
                 spells: vec![0, 1, 2, 3, 4, 5, 6],
                 spell_circle: vec![0, 1],
-                inventory: vec![]
+                inventory: vec![],
+                mana: 0
             },
             first_name: String::from("Adam"),
             last_name: String::from("See"),
