@@ -1,1 +1,2 @@
 pub mod spells;
+pub mod cast_spell;
