@@ -1,3 +1,11 @@
+May 16 2024
+Added:
+ the beginning of the spell system
+-----------------------------------------------------------------------------------------
+May 15 2024
+Added:
+ mana to Entity
+-----------------------------------------------------------------------------------------
 May 13 2024
 Fixed:
  when you start the game you can pickup the robe
